--- a/config/samples/media_v1alpha1_mediaserver.yaml
+++ b/config/samples/media_v1alpha1_mediaserver.yaml
@@ -7,6 +7,35 @@ metadata:
     app.kubernetes.io/part-of: media-server-operator
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: media-server-operator
-  name: mediaserver-sample
+  name: watcher
 spec:
-  # TODO(user): Add fields here
+  image: flussonic/flussonic:v24.02-107
+  hostPort: 85
+  adminHostPort: 86
+  env:
+    - name: LICENSE_KEY
+      valueFrom:
+        secretKeyRef:
+          name: flussonic-license
+          key: license_key
+          optional: false
+    # - name: FLUSSONIC_CONFIG_EXTERNAL
+    #   value: "http://apikey0@central.default.svc.cluster.local/streamer/api/v3/streamers/$(FLUSSONIC_HOSTNAME)"
+    - name: FLUSSONIC_EDIT_AUTH
+      valueFrom:
+        secretKeyRef:
+          name: flussonic-license
+          key: edit_auth
+          optional: false
+  nodeSelector:
+    flussonic.com/streamer: "true"
+  configExtra:
+    watcher.conf: |
+      cluster_key FxNtj8tU0olsD1;
+      dvr central {
+        root /storage;
+      }
+      auth_backend vsaas {
+        backend http://watcher.default.svc.cluster.local/vsaas/api/camera_auth;
+      }
+
