--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,6 @@
 # More info: https://docs.docker.com/engine/reference/builder/#dockerignore-file
 # Ignore build and test binaries.
 bin/
+env
+
+k3s.yaml
