Adding volumes to operator #37926

--- a/bundle/manifests/media-server-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/media-server-operator.clusterserviceversion.yaml
@@ -291,7 +291,7 @@ spec:
   - webrtc
   links:
   - name: Media Server Operator
-    url: https://media-server-operator.domain
+    url: https://flussonic.com/media-server/
   maintainers:
   - email: m.lapshin@flussonic.com
     name: Max Lapshin
