--- a/catena-se/base/ingress.yaml
+++ b/catena-se/base/ingress.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mediaserver
-  namespace: catena-se
 spec:
   ports:
   - port: 80
@@ -12,15 +11,13 @@ spec:
     targetPort: 81
     name: api
   selector:
-    app.kubernetes.io/name: catena-se
-    app.kubernetes.io/component: streamer
+    app: streamer
   internalTrafficPolicy: Local
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: central
-  namespace: catena-se
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
@@ -44,7 +41,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mediaserver
-  namespace: catena-se
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
 
